--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -146,35 +146,28 @@
 
 <h2 id="1c">Reporting the income earned on the self-employed's income tax return</h2>
 
-<p>When filing the <strong>T1 return</strong>, the self-employed worker must:</p>
+<p>When filing the <strong>T1 return</strong>, the self-employed worker:</p>
 <ul>
-<li>Eligible to claim eligible expenses on XXX </li>	
-<li>Calculate CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, Canada Pension Plan Contributions and Overpayment (for all except QC) </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, Quebec Pension Plan Contributions (for QC only)</li>
+<li>Claims eligible expenses on line XXX </li>	
+<li><p>Calculates the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, CPP Contributions and Overpayment (for all except QC) </li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, QPP Contributions (for QC only)</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc381.html">Form RC381</a>, Inter-Provincial Calculation for CPP and QPP Contributions and Overpayments</li>
 </ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/cpp/canada-pension-plan-cpp-contributions-cpp-working-beneficiaries.html">Canada Pension Plan (CPP) contributions for CPP working beneficiaries</a></p>
 </li>
-
-
-<ul class="fa-ul">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
+<li>Calculates the amount of EI premiums only if the self-employed worker is <strong>not</strong> a barber, hairdresser, fisher, taxi driver, or a driver of other passenger vehicles using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s13.html">Schedule 13</a>, Schedule 13 - EI Premiums on Self-Employment and Other Eligible Earnings (under special EI regulations, the payer is responsible to remit EI on behalf of the worker on all of their insurable earnings)</li>
 </ul>
-</li>	
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></p>
+</li>
 <li>Report the self-employed income on line XXX of the T1 return </li>	
 </ul>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
 
-<p class="mrgn-tp-lg">Learn more: </p>
-<ul>
-<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
-<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
-</ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></p>
+
 
 <h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
 <p>The self-employed worker payroll and GST/HST tax obligations for employees of the self-employed worker are the same as regular employers.</p>
