--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -147,29 +147,29 @@
 <h2 id="1c">Reporting the income earned on the self-employed's income tax return</h2>
 
 <p>When filing the <strong>T1 return</strong>, the self-employed worker:</p>
-<ul>
-<li><p>Calculates the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using one of the following:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using one of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, CPP Contributions and Overpayment (for all except QC) </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, QPP Contributions (for QC only)</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc381.html">Form RC381</a>, Inter-Provincial Calculation for CPP and QPP Contributions and Overpayments</li>
 </ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/cpp/canada-pension-plan-cpp-contributions-cpp-working-beneficiaries.html">Canada Pension Plan (CPP) contributions for CPP working beneficiaries</a></p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/cpp/canada-pension-plan-cpp-contributions-cpp-working-beneficiaries.html">Canada Pension Plan (CPP) contributions for CPP working beneficiaries</a></p>
 </li>
-<li><p>Calculates the amount of EI premiums only if the self-employed worker is <strong>not</strong> a barber, hairdresser, fisher, taxi driver, or a driver of other passenger vehicles using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s13.html">Schedule 13</a>, Schedule 13 - EI Premiums on Self-Employment and Other Eligible Earnings (under special EI regulations, the payer is responsible to remit EI on behalf of the worker on all of their insurable earnings)</p>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></p>
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates the amount of EI premiums only if the self-employed worker is <strong>not</strong> a barber, hairdresser, fisher, taxi driver, or a driver of other passenger vehicles using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s13.html">Schedule 13</a>, EI Premiums on Self-Employment and Other Eligible Earnings <small>(under special EI regulations, the payer is responsible to remit EI on behalf of the worker on all of their insurable earnings)</small></p>
+<p>Learn more: <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></p>
 </li>
-<li><p>Calculates and reports business income and expenses using:</p>
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates and reports business income and expenses using:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
 </ul>
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/report-business-income-expenses.html">Report business income and expenses</a></p>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/report-business-income-expenses.html">Report business income and expenses</a></p>
 </li>
 </ul>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships.html">Sole proprietorships and partnerships</a></p>
+<p class="mrgn-tp-lg">Learn more about other reporting tax obligations: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships.html">Sole proprietorships and partnerships</a></p>
 
 
 <h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
