--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -82,8 +82,8 @@
   <dd>Information on the factors to consider to determine if the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation, this may be considered a personal services business (PSB) </dd>
 
 
-<dt>    <a href="after.html">Understand your tax obligations</a>  </dt>
-   <dd>Find links to your tax obligations depending on your situation, including how to request penalty or interest relief  </dd>
+<dt>    <a href="after.html">Understand the tax obligations</a>  </dt>
+   <dd>Important information about the tax obligations depending on the situation, including how to request penalty or interest relief  </dd>
 
 </dl>            
 
