--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Understand your tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
+         <title>Understand the tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -78,7 +78,7 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="active" aria-current="page">Understand your tax obligations</a>
+<li><a href="after.html" class="active" aria-current="page">Understand the tax obligations</a>
 
 
 <ul class="noline">
@@ -101,7 +101,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Understand your tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Understand the tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
@@ -111,7 +111,7 @@
 
 <p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
 
-<p>To understand your tax obligations, continue to one of the following depending on the type of relationship:</p>
+<p>To understand the tax obligations, continue to one of the following depending on the type of relationship:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer</a></li>
