--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -78,8 +78,8 @@
 
  <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="hidden-xs hidden-sm">Understand your tax obligations</a>
-      <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand your tax obligations </a></li>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
+      <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the tax obligations </a></li>
 
 </ul>
  
