--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -92,8 +92,8 @@
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
 
-<li><a href="after.html" class="hidden-xs hidden-sm">Understand your tax obligations</a>
-      <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand your tax obligations </a></li>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
+      <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the tax obligations </a></li>
 
  </ul>
  
