--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Employee and employer relationship - Understand your tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
+         <title>Employee and employer relationship - Understand the tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -55,7 +55,7 @@
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "../../index.html"
              },{
-                title: "Understand your tax obligations",
+                title: "Understand the tax obligations",
                 href: "index.html"
               }
               ],
@@ -80,8 +80,8 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="hidden-xs hidden-sm">Understand your tax obligations</a>
-      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand your tax obligations</a>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
+      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the tax obligations</a>
 
 <ul class="noline">
 
@@ -102,7 +102,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Employee and employer relationship: Understand your tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Employee and employer relationship: Understand the tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
