--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -149,7 +149,7 @@
 <p>When filing the <strong>T1 return</strong>, the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check text-success fa-li"></span> <p>Calculates the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using one of the following:</p>
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, CPP Contributions and Overpayment (for all except QC) </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, QPP Contributions (for QC only)</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc381.html">Form RC381</a>, Inter-Provincial Calculation for CPP and QPP Contributions and Overpayments</li>
@@ -160,7 +160,7 @@
 <p>Learn more: <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></p>
 </li>
 <li><span class="fas fa-check text-success fa-li"></span> <p>Calculates and reports business income and expenses using:</p>
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
