--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -144,19 +144,19 @@
 <h2 id="1a">Reporting the income earned on the PSB's income tax return</h2>
 
 <p>When filing the <strong>T2 return</strong>, the PSB must:</p>
-<ul>
-<li><strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
-<ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li"></span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success fa-li"></span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success fa-li"></span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
-<li><span class="fas fa-check text-success fa-li"></span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check text-success fa-li"></span> <strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col"> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
+<li class="cnjnctn-col"> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
+<li class="cnjnctn-col"> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
+<li class="cnjnctn-col"> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li>Report the PSB income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
-<li><strong>Not claim the SBD</strong> on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
-<li>Report the PSB income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
-<li>Report the PSB income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
+<li><span class="fas fa-check text-success fa-li"></span> <strong>Not claim the SBD</strong> on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 </ul>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
