--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -133,14 +133,42 @@
  <details id="tab2"><summary>Employer</summary>
 <p>Understanding the employer's tax obligations:</p>
 <ul>
-<li><a href="#1A">Withholding and remitting deductions</a> </li>
-<li><a href="#1B">Reporting on the slip</a> </li>
-<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
+<li><a href="#2A">Withholding and remitting deductions </a> </li>
+<li><a href="#2B">Reporting and distributing the slip</a> </li>
+<li><a href="#2C">Reporting on the employer's income tax return</a> </li>
 </ul> 
 
-<h5>Withholding and remitting deductions</h5>
-<p>Generally, you must remit the following deductions on the employment income paid to an employer:</p>
+<h2 id="2A">Withholding and remitting deductions </h2>
+<p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+
+<h2 id="2B">Reporting and distributing the slip</h2>
+<p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
+
+<p>If the employer distributes the slips late or does not distribute, the employer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
+
+<p>Learn more:</p>
+<ul>
+<li> <a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
+<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
+</ul>
+
+<h2 id="2C">Reporting the payment on the employer's income tax return</h2>
+<p>Generally, the employer includes the payment made to the employee in their calculation of business expenses using one of the following form when filing their income tax return:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>T1 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</p>
+
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
+</li>
+
+<li class="cnjnctn-col"><h4>T2 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
+
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
+</li>	
+</ul>
 </details>
 </div></div>
   
