--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -155,12 +155,15 @@
 </ul>
 
 <h2 id="2C">Reporting the payment on the employer's income tax return</h2>
-<p>Generally, the employer includes the payment made to the employee in their calculation of business expenses using one of the following form when filing their income tax return:</p>
+<p>Generally, the employer includes the payment made to the employee in their calculation of business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
-<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</p>
-
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
+</ul>
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/services/taxes/income-tax/business-or-professional-income.html">Business or professional income </a></p>
 </li>
 
 <li class="cnjnctn-col"><h4>T2 return</h4> 
