--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -123,11 +123,17 @@
     <details id="tab1"><summary>Employee</summary>
 <p>Understanding the employee's tax obligations:</p>
 <ul>
-<li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
+<li><a href="#1a">Receiving the slip</a> </li>
+<li><a href="#1b">Reporting the income earned on the employee's income tax return</a> </li>
 </ul> 
 
+<h2 id="1a">Receiving the slip</h2>
+<p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
+<p>Learn more about the options if the employee does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></p>
 
-<h3 id="1a">Income tax obligations</h3>
+<h2 id="1b">Reporting the income earned on the employee's income tax return</h2>
+<p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4-statement-remuneration-paid.html">T4 slip: Statement of Remuneration Paid</a></p>
 
  </details>
  <details id="tab2"><summary>Employer</summary>
