--- a/payroll/file/pier.html
+++ b/payroll/file/pier.html
@@ -132,13 +132,14 @@
 </ul>
 
 <h2 id="h-0">What is a PIER</h2>
+<div id="ajax-pier">
 <p>Every year, the CRA reviews the information on the T4 slips to ensure that the following amounts match:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><strong>Required </strong>amounts of CPP and EI calculated from the employee's pensionable and insurable earnings </li>
 <li class="cnjnctn-col"><strong>Reported </strong>amounts of CPP and EI on the employee's T4 slips </li>
 </ul>
-
+</div>
 <h3 id="h-0-1">Why the PIER is important</h3>
 <p>The CRA verifies the CPP and EI calculations so that your employee or their beneficiaries will receive the proper:</p>
 
