--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -165,9 +165,9 @@
 
 <h2 id="2C">Reporting the payment on the employer's income tax return</h2>
 <p>Generally, the employer includes the payment made to the employee in their calculation of business income and expenses using one of the following form when filing their income tax return:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><h4>T1 return</h4> 
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
@@ -178,8 +178,13 @@
 <li class="cnjnctn-col"><h4>T2 return</h4> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
 
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
 </li>	
+<li class="cnjnctn-col"><h4>T5013 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
+
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
+</li>
 </ul>
 </details>
 </div></div>
