--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -202,7 +202,7 @@
 
 <h2 id="2C">Reporting the payment on the payer's income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</p>
 
@@ -214,6 +214,12 @@
 
  <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
 </li>	
+
+<li class="cnjnctn-col"><h4>T5013 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
+
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
+</li>
 </ul>
 
  </details>
