--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -172,18 +172,18 @@
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
 </ul>
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/services/taxes/income-tax/business-or-professional-income.html">Business or professional income </a></p>
+ <p>Learn more: <a href="https://www.canada.ca/en/services/taxes/income-tax/business-or-professional-income.html">Business or professional income </a></p>
 </li>
 
 <li class="cnjnctn-col"><h4>T2 return</h4> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
 
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
 </li>	
 <li class="cnjnctn-col"><h4>T5013 return</h4> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
 
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
 </li>
 </ul>
 </details>
