--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -148,10 +148,10 @@
 <p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
-<h3>Discrepancies between the required and reported amounts</h3>
+<details><summary>Discrepancies between the required and reported amounts</summary>
 <div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
-
+</details>
 <h2 id="2B">Reporting and distributing the slip</h2>
 <p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
 
