--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -184,10 +184,10 @@
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<h3>Discrepancies between the required and reported amounts</h3>
+<details><summary>Discrepancies between the required and reported amounts</summary>
 <div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
-
+</details>
 
 <h2 id="2B">Reporting and distributing the slip</h2>
 <p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
