--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -102,11 +102,12 @@
 	<li class="cnjnctn-col">Read the full text, continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></li>
 	</ul>
  <div id="ajax-psb-classification">			 
-<h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
+<h3>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h3>	
    
-<div class="alert alert-warning">
-<p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
-</div>
+ <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
+    <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
+    <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
+  </div>
 
   
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
