--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -202,7 +202,7 @@
 
 <p>The worker is an incorporated employee. This also means that the worker is operating a personal service business (PSB). </p>
 <p>PSB’s have different tax obligations.</p>
-<p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+<p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
 </div>
 
 <div id="ajax-psb5not" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -230,7 +230,7 @@
 </li>
 
 <li class="cnjnctn-col">
-<p>If you know the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+<p>If you know the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
 </li>
 </ul>
 </div>
@@ -241,7 +241,7 @@
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
 </div>
 
 </div>
@@ -277,7 +277,7 @@
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
-    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span>Understand the income tax, payroll and GST/HST tax obligations</a></li>
+    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span>Understand the tax obligations</a></li>
   </ul>
 </nav>
 
