--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -202,7 +202,7 @@
 
 <p>The worker is an incorporated employee. This also means that the worker is operating a personal service business (PSB). </p>
 <p>PSB’s have different tax obligations.</p>
-<p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
+<p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-psb.html">Incorporated employee and payer relationship: Understand the tax obligations</a></p>
 </div>
 
 <div id="ajax-psb5not" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
