--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -132,7 +132,7 @@
 
 <h3>Get webinar updates</h3>
 	<p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program announcements, sign up to our email list.</p>
-	<p>Subscribe to the <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED tax incentives email list</a></p>
+	<p>Subscribe to the <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED tax incentives email list</a>.</p>
 		 <p>OR</p>
 		 <p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program announcements, subscribe to the <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED tax incentives email list</a>.</p>
 
