--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -247,9 +247,9 @@
 	    <span class="fas fa-comments fa-stack-1x"></span>
 	  </span>
 	  </div> <div class="col-xs-9 col-sm-10">
-	<p>If you are still not sure if the worker is an employee or self-employed after following the CRA guidance, you can ask for a CPP/EI ruling.  </p>
+	<div id="ajax-ruling"> <p>If you are still not sure if the worker is an employee or self-employed after following the CRA guidance, you can ask for a CPP/EI ruling.  </p>
 	<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-11.html">How to get a CPP/EI ruling</a></p>
-	
+	</div>
 	</div></div>
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
