--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1706,10 +1706,10 @@
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
     <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
     <p >After gathering the facts, you may be able to decide if the:</p>
-    <ul class="cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
+    <ul class="cnjnctn-type-or cnjnctn-sm ">
       <li class="cnjnctn-col">
 		  <div class="bg-info px-2">
-        <h4>Worker is an employee<br></h4>
+        <h4>Worker is an employee<br><p></p></h4>
 			  </div>
         <p class="mrgn-tp-md">If the worker is an employee, you may need to consider additional factors to determine if the worker is an <strong>incorporated employee</strong>. </p>
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
@@ -1717,7 +1717,7 @@
       </li>
       <li class="cnjnctn-col-70">
          <div class="bg-primary px-2">
-		  <h4>Worker is self-employed  <br></h4>
+		  <h4>Worker is self-employed  <br><p></p></h4>
 			 </div>
         <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
       </li>
