--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1713,7 +1713,7 @@
 			  </div>
         <p class="mrgn-tp-md">If the worker is an employee, you may need to consider additional factors to determine if the worker is an <strong>incorporated employee</strong>. </p>
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
-        <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
+        <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a> </p>
       </li>
       <li class="cnjnctn-col-70">
          <div class="bg-primary px-2">
