--- a/subway/fire/1.html
+++ b/subway/fire/1.html
@@ -60,36 +60,24 @@
             <nav class="gc-subway provisional">
                <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
                <ul>
-                  <li><a href="1.html" class="active">What to fill out</a></li>
+	<p>When and how to file, distribute and amend information slips electronically (for example, T4, T4A, T5, and other type of returns), including how to use Web Forms.</p>
+                 <h2>Sections</h2>
+		       <li><a href="1.html" class="active">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
                   <li><a href="3.html">Get ready to file</a></li>
                   <li><a href="4.html">How to file</a></li>
                   <li><a href="5.html">Make corrections after filing</a></li>
 				  <li><a href="6.html">Contact us</a></li>
                </ul>
-            </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">What to fill out</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <nav class="gc-subway-pagination">
-               <h2 class="wb-inv">Document navigation</h2>
-               <ul class="pager">
-                  <li class="next"><a href="2.html" rel="next"><span class="wb-inv">Next: </span>When to file</a></li>
-               </ul>
+           
+	     <h3>Related services and information</h3>
+	    <ul>
+<li><a href="link">Web access code</a></li>
+<li><a href="link">Internet file transfer</a></li>
+<li><a href="link">Web forms</a></li>
+<li><a href="link">My Business Account</a></li>
+<li><a href="link">represent a client</a></li>
+</ul>
             </nav>
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
