--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1719,7 +1719,7 @@
     <ul class="cnjnctn-type-or cnjnctn-sm ">
       <li class="cnjnctn-col">
 		  <div class="bg-info px-2">
-        <h4>Worker is an employee<br><p></p></h4>
+       <p class="px-2 px-sm-3 mrgn-bttm-sm"><span class="h6">Indicator that the worker is an: </span><br><span class="h3">Employee</span></p>
 			  </div>
         <p class="mrgn-tp-md">If the worker is an employee, you may need to consider additional factors to determine if the worker is an <strong>incorporated employee</strong>. </p>
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
@@ -1727,7 +1727,7 @@
       </li>
       <li class="cnjnctn-col-70">
          <div class="bg-primary px-2">
-		  <h4>Worker is self-employed  <br><p></p></h4>
+		<p class="px-2 px-sm-3 mrgn-bttm-sm"><span class="h6">Indicator that the worker is: </span><br><span class="h3">Self-employed</span></p>
 			 </div>
         <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
       </li>
