--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -77,22 +77,26 @@
   <div class="alert alert-info">
     <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
   </div>
-  <p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
-  <ul class="fa-ul mrgn-bttm-lg">
-    <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec </li>
-    <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
-  </ul>
-<h2 class="h3">On this page</h2>
+<h2 class="h3">On this page:</h2>
   	
 <ul>
+<li><a href="#h_0">Determine where the contract was formed</a></li>
 <li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
 <li><a href="#h_2">Final analysis based on all factors</a></li>
 <li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</li>
 <li><a href="#h_4">References</a></li>
 </ul>
 
+  <h2 id="h_0">Determine where the contract was formed</h2>
+  <p>The CRA developed a guidance to help determine the status of the worker. Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
+  <ul class="fa-ul mrgn-bttm-lg">
+    <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec </li>
+    <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
+  </ul>
+<p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
+  
+
   <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
-  <p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
   <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
     <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
