--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1721,7 +1721,7 @@
     <h3 id="analyze">Analyze the facts</h3>
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
     <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
-    <p >After gathering the facts, you may be able to decide if the:</p>
+    <p>After gathering the facts, you may be able to decide based on the following indicators:</p>
     <ul class="cnjnctn-type-or cnjnctn-sm ">
       <li class="cnjnctn-col">
 		  <div class="bg-info px-2">
@@ -1731,7 +1731,7 @@
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
         <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a> </p>
       </li>
-      <li class="cnjnctn-col-60">
+      <li class="cnjnctn-col-80">
          <div class="bg-primary px-2">
 		<p class="px-2 px-sm-3 mrgn-bttm-sm"><span class="h6">Indicator that the worker is: </span><br><span class="h3">Self-employed</span></p>
 			 </div>
