--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -103,6 +103,7 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
+<h2 class="h3">On this page:</h2>
 <ul>
 <li><a href="#h_0">Determine where the contract was formed</a></li>
 <li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
