--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -83,7 +83,7 @@
 <li><a href="#h_0">Determine where the contract was formed</a></li>
 <li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
 <li><a href="#h_2">Final analysis based on all factors</a></li>
-<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</li>
+<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</a></li>
 <li><a href="#h_4">References</a></li>
 </ul>
 
