--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -92,24 +92,31 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
+<p>Special rules may apply if the worker is an incorporated employee for income tax purposes when they perform services on behalf of their own corporation. This may be considered a personal services business (PSB).</p>
+
+<h2 class="h3">On this page:</h2>
+<ul>
+<li><a href="#h_0">Guidance to determine if the worker is an incorporated employee</a></li>
+<li><a href="#h_1">Answer a few questions to determine the status of the worker</a></li>
+<li><a href="#h_2">Final analysis based on all factors</a></li>
+<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</a></li>
+<li><a href="#h_4">References</a></li>
+</ul>
+
+<h2 id="h_0">Guidance to determine if the worker is an incorporated employee</h2>
+  <p>The CRA developed a guidance to help determine the status of the worker.</p>
+
 <p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed and you want to know if the worker is an incorporated employee.</p>
 
-<p>If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB).</p>
-
-<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col">Read the full text, continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></li>
-	</ul>
- <div id="ajax-psb-classification">			 
-<h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
-   
  <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
     <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
 
-  
+<p>You also have the choice to read the same information in <strong>full text</strong> continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></p>
+
+<h2 id="h_1">Answer a few questions to determine the status of the worker</h2>
+
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
 <div id="interactive"> 
 <div class="wb-frmvld gc-font-2019">  <form>
@@ -324,7 +331,7 @@
 </ul>
 	</div></section>
 	 
-</div>
+
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
