--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -230,8 +230,8 @@
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a> 
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a> 
 </li>
 
 <li class="cnjnctn-col">
